5week/ch9/catalog-viewer-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "catalog-viewer"
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: catalog
  rules: []
#  - from:
#    - source:
#        principals: ["cluster.local/ns/istioinaction/sa/webapp"]
#    to:
#    - operation:
#        methods: ["GET"]
#  - to:
#      - operation:
#          methods: ["GET"]
